# OmegaSentinel_Infinity

./: .gitignore  Cargo.toml  DEPLOY_TO_FLASH.bat  Dockerfile  README.md  Shield.ps1  app.py  bootstrap_omega.py  control.py  deploy_stealth.ps1  deploy_swarm_node.sh  docker-compose.yml  installer.py  requirements.txt  watchdog_service.py
configs/: .env.example  db-init.sql  nginx.conf  prometheus.yml  threat_database.json
data/cache/: dark_ips.json
data/dark_intel_cache/: dark_ips.json
data/intel_cache/: malicious_ips.json
docs/: DEPLOYMENT_MANIFEST.md  DEPLOYMENT_READY.md  ELITE_DEFENSE_GUIDE.md  HARDWARE_SECURITY_INTEGRATION.md  HARDWARE_SECURITY_QUICK_START.md  README.md  REAL_ATTACK_SCENARIOS.md  REAL_CAPABILITIES.md  SYSTEM_COMPLETE_SUMMARY.md
scapy-2.7.0.dist-info/: RECORD
scripts/: demo_usb_block.py  deploy-loputhjoseph-client.sh
src/: __init__.py  agent_entry.py  ai_controller.py  dark_intel.py  defender_integration.py  deployer.rs  firewall_manager.py  loputh.py  main.rs  main_entry.py  post_quantum_crypto.py  security_intel.py  sentinel_ebpf.rs  sentinel_hw_shield.rs  server.py  update_manager.py
src/c2_server/: receiver.py
src/comms/: bot_factory.py
src/converted/: app_real.rs  check_password.rs  email_scanner.rs  hardware_root_of_trust.rs  measured_boot_verification.rs  mod.rs  process_monitor.rs  ransomware_detector.rs  rbac.rs  server.rs  system_file_scanner.rs  universal_responder.rs  unix_defender.rs
teacher/: pcr0.hex
templates/: index.html
tools/: deploy_to_usb.ps1
web/: dashboard.html  index.html  login.html
(+118 files in other folders)
