[package]
name = "teacher"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.27"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[target.'cfg(unix)'.dependencies]
nix = "0.26"

# Optional, platform-specific native crates. Enabled via the `real_hw` feature.
tss-esapi = { version = "7.0", optional = true }
aya = { version = "0.13", optional = true }

[features]
# default keeps the crate usable without native kernel/TPM dependencies
default = []
# enable real TPM (tss-esapi) and eBPF (aya) code paths
real_hw = ["tss-esapi", "aya"]

[[bin]]
name = "deployer"
path = "src/deployer.rs"

[[bin]]
name = "teacher"
path = "src/main.rs"
